==> vedderb/vesc_bms_fw/ChibiOS_20.3.0/community/os/hal/ports/NRF5/LLD/TWIv1/hal_i2c_lld.c <==
#include "osal.h"
#include "hal.h"
#include "nrf_delay.h"
#define I2C_HIGH(p)   do { IOPORT1->OUTSET = (1UL << (p)); } while(0)   /*!< Pulls I2C line high */
#define I2C_LOW(p)    do { IOPORT1->OUTCLR = (1UL << (p)); } while(0)   /*!< Pulls I2C line low  */
#define I2C_INPUT(p)  do { IOPORT1->DIRCLR = (1UL << (p)); } while(0)   /*!< Configures I2C pin as input  */
#define I2C_OUTPUT(p) do { IOPORT1->DIRSET = (1UL << (p)); } while(0)   /*!< Configures I2C pin as output */
#define I2C_PIN_CNF(internal_pullup) \
      ((GPIO_PIN_CNF_SENSE_Disabled  << GPIO_PIN_CNF_SENSE_Pos) \
      | (GPIO_PIN_CNF_DRIVE_S0D1     << GPIO_PIN_CNF_DRIVE_Pos) \
      | (((internal_pullup) ? GPIO_PIN_CNF_PULL_Pullup : GPIO_PIN_CNF_PULL_Disabled)  << GPIO_PIN_CNF_PULL_Pos)  \
      | (GPIO_PIN_CNF_INPUT_Connect  << GPIO_PIN_CNF_INPUT_Pos) \
      | (GPIO_PIN_CNF_DIR_Input      << GPIO_PIN_CNF_DIR_Pos))
#define I2C_PIN_CNF_CLR(internal_pullup) \
      ((GPIO_PIN_CNF_SENSE_Disabled  << GPIO_PIN_CNF_SENSE_Pos) \
      | (GPIO_PIN_CNF_DRIVE_S0D1     << GPIO_PIN_CNF_DRIVE_Pos) \
      | (((internal_pullup) ? GPIO_PIN_CNF_PULL_Pullup : GPIO_PIN_CNF_PULL_Disabled)  << GPIO_PIN_CNF_PULL_Pos)  \
      | (GPIO_PIN_CNF_INPUT_Connect  << GPIO_PIN_CNF_INPUT_Pos) \
      | (GPIO_PIN_CNF_DIR_Output     << GPIO_PIN_CNF_DIR_Pos))
#define I2C_IRQ_NUM     SPI0_TWI0_IRQn
#define I2C_IRQ_PRI     NRF5_I2C_I2C0_IRQ_PRIORITY
#define I2C_IRQ_NUM     SPI1_TWI1_IRQn
#define I2C_IRQ_PRI     NRF5_I2C_I2C1_IRQ_PRIORITY

static void serve_interrupt(I2CDriver *i2cp) {

  NRF_TWI_Type *i2c = i2cp->i2c;

  if(i2c->EVENTS_TXDSENT) {

    i2c->EVENTS_TXDSENT = 0;
#if CORTEX_MODEL >= 4
    (void)i2c->EVENTS_TXDSENT;
#endif
    
    if(--i2cp->txbytes) {

      i2c->TXD = *i2cp->txptr++;
      i2c_setup_shortcut(i2cp);
      i2c->TASKS_RESUME = 1;
      tx_resume_count++;
    }
    else if (i2cp->rxbytes) {

      i2c_setup_shortcut(i2cp);
      i2c->TASKS_STARTRX = 1;
    }
  }
  if(i2c->EVENTS_RXDREADY) {

    i2c->EVENTS_RXDREADY = 0;
#if CORTEX_MODEL >= 4
    (void)i2c->EVENTS_RXDREADY;
#endif
    
    *i2cp->rxptr++ = i2c->RXD;

    if(--i2cp->rxbytes) {
      i2c_setup_shortcut(i2cp);
      i2c->TASKS_RESUME = 1;
      rx_resume_count++;
    }
  }
  if(i2c->EVENTS_ERROR) {

    uint32_t err = i2c->ERRORSRC;
    i2c->EVENTS_ERROR = 0;
#if CORTEX_MODEL >= 4
    (void)i2c->EVENTS_ERROR;
#endif
    if (err & TWI_ERRORSRC_OVERRUN_Msk)
      i2cp->errors |= I2C_OVERRUN;
    if (err & (TWI_ERRORSRC_ANACK_Msk | TWI_ERRORSRC_DNACK_Msk))
      i2cp->errors |= I2C_ACK_FAILURE;

    i2c->TASKS_STOP = 1;
    _i2c_wakeup_error_isr(i2cp);
  } else if(i2c->EVENTS_STOPPED) {

    stop_count++;
    i2c->EVENTS_STOPPED = 0;
#if CORTEX_MODEL >= 4
    (void)i2c->EVENTS_STOPPED;
#endif
    _i2c_wakeup_isr(i2cp);
  }
}

void i2c_lld_init(void) {

#if NRF5_I2C_USE_I2C0
  i2cObjectInit(&I2CD1);
  I2CD1.thread = NULL;
  I2CD1.i2c = NRF_TWI0;
#endif

#if NRF5_I2C_USE_I2C1
  i2cObjectInit(&I2CD2);
  I2CD2.thread = NULL;
  I2CD2.i2c = NRF_TWI1;
#endif

}

void i2c_lld_start(I2CDriver *i2cp) {

  NRF_TWI_Type *i2c = i2cp->i2c;
  const I2CConfig *cfg = i2cp->config;

  if (i2cp->state != I2C_STOP)
    return;

  i2c_clear_bus(i2cp);

  IOPORT1->PIN_CNF[cfg->scl_pad] = I2C_PIN_CNF(cfg->scl_pullup);
  IOPORT1->PIN_CNF[cfg->sda_pad] = I2C_PIN_CNF(cfg->sda_pullup);

  i2c->EVENTS_RXDREADY = 0;
  i2c->EVENTS_TXDSENT = 0;
#if CORTEX_MODEL >= 4
  (void)i2c->EVENTS_RXDREADY;
  (void)i2c->EVENTS_TXDSENT;
#endif
  i2c->PSELSCL = cfg->scl_pad;
  i2c->PSELSDA = cfg->sda_pad;
  
  switch (cfg->clock) {
    case 100000:
      i2c->FREQUENCY = TWI_FREQUENCY_FREQUENCY_K100 << TWI_FREQUENCY_FREQUENCY_Pos;
      break;
    case 250000:
      i2c->FREQUENCY = TWI_FREQUENCY_FREQUENCY_K250 << TWI_FREQUENCY_FREQUENCY_Pos;
      break;
    case 400000:
      i2c->FREQUENCY = TWI_FREQUENCY_FREQUENCY_K400 << TWI_FREQUENCY_FREQUENCY_Pos;
      break;
    default:
      osalDbgAssert(0, "invalid I2C frequency");
      break;
  };

  nvicEnableVector(I2C_IRQ_NUM, I2C_IRQ_PRI);

  i2c->INTENSET = TWI_INTENSET_TXDSENT_Msk | TWI_INTENSET_STOPPED_Msk |
    TWI_INTENSET_ERROR_Msk | TWI_INTENSET_RXDREADY_Msk;

  i2c->ENABLE = TWI_ENABLE_ENABLE_Enabled << TWI_ENABLE_ENABLE_Pos;
}

void i2c_lld_stop(I2CDriver *i2cp) {

  NRF_TWI_Type *i2c = i2cp->i2c;
  const I2CConfig *cfg = i2cp->config;

  if (i2cp->state != I2C_STOP) {

    i2c->ENABLE = TWI_ENABLE_ENABLE_Disabled << TWI_ENABLE_ENABLE_Pos;

    i2c->INTENCLR = TWI_INTENSET_TXDSENT_Msk | TWI_INTENSET_STOPPED_Msk |
      TWI_INTENSET_ERROR_Msk | TWI_INTENSET_RXDREADY_Msk;

    nvicDisableVector(I2C_IRQ_NUM);

    IOPORT1->PIN_CNF[cfg->scl_pad] = I2C_PIN_CNF_CLR(cfg->scl_pullup);
    IOPORT1->PIN_CNF[cfg->sda_pad] = I2C_PIN_CNF_CLR(cfg->sda_pullup);
  }
}

static inline msg_t _i2c_txrx_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                      const uint8_t *txbuf, size_t txbytes,
                                      uint8_t *rxbuf, size_t rxbytes,
                                      systime_t timeout) {

  NRF_TWI_Type *i2c = i2cp->i2c;

  (void)timeout;
  msg_t msg;

  i2cp->errors = I2C_NO_ERROR;
  i2cp->addr = addr;

  i2cp->txptr = txbuf;
  i2cp->txbytes = txbytes;

  i2cp->rxptr = rxbuf;
  i2cp->rxbytes = rxbytes;

  i2c->ADDRESS = addr;

  tx_resume_count = 0;
  rx_resume_count = 0;
  stop_count = 0;

  if (i2cp->txbytes) {

    i2c->TXD = *i2cp->txptr++;
    i2c_setup_shortcut(i2cp);
    i2c->TASKS_STARTTX = 1;
  } else if (i2cp->rxbytes) {

    i2c_setup_shortcut(i2cp);
    i2c->TASKS_STARTRX = 1;
  } else {

    osalDbgAssert(0, "no bytes to transfer");
  }

  msg = osalThreadSuspendTimeoutS(&i2cp->thread, timeout);

  if (msg == MSG_TIMEOUT)
    i2c->TASKS_STOP = 1;

  return msg;
}
